example/fail/fail_type7.dl

int $[main]{
    struct example{
        int a ;
        string b;
    } obj;
    obj->c <- 1;//invalid field
    
}

